--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
     "sass-loader": "14.0.0",
     "vite": "^5.3.5"
   },
-  "overrides": {
-    "prop-types": "15.8.1",
-    "sass": "1.76.0"
-  },
-  "resolutions": {
-    "prop-types": "15.8.1",
-    "sass": "1.76.0"
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "apexcharts-clevision": "^3.28.5",
+    "bootstrap": "~5.3.3",
+    "boxicons": "~2.1.4",
+    "highlight.js": "~11.9.0",
+    "jquery": "~3.7.1",
+    "masonry-layout": "~4.2.2",
+    "perfect-scrollbar": "~1.5.5",
+    "laravel-vite-plugin": "1.0.1",
+    "prop-types": "15.8.1"
   },
   "browserslist": [
     ">= 1%",
@@ -76,16 +80,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "apexcharts-clevision": "^3.28.5",
-    "bootstrap": "~5.3.3",
-    "boxicons": "~2.1.4",
-    "highlight.js": "~11.9.0",
-    "jquery": "~3.7.1",
-    "masonry-layout": "~4.2.2",
-    "perfect-scrollbar": "~1.5.5",
-    "laravel-vite-plugin": "1.0.1"
   }
 }
